--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div id="map"></div>
-  <button class="play-btn" onclick="Game.html">Ready to Play</button>
+  <button class="play-btn" onclick="github.com/vfrevangelista/IWM-ITCU/blob/main/Game.html">Ready to Play</button>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
   <script>
@@ -169,4 +169,5 @@
 </body>
 
 </html>
+
 
