--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div id="map"></div>
-  <button class="play-btn" onclick="location.href='Game.html'">Ready to Play</button>
+  <button class="play-btn" onclick="https://vfrevangelista.github.io/IWM-ITCU/Game.html">Ready to Play</button>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
   <script>
@@ -169,6 +169,7 @@
 </body>
 
 </html>
+
 
 
 
