--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ITCU Interactive Map & Game</title>
+  <title>Interactive Map - ITCU</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -144,7 +144,7 @@
   <div class="landing" id="landing">
     <div class="overlay"></div>
     <div class="landing-content">
-      <img src="landingpage.png" width="1240px" height="1748px" alt="landingpage"> 
+      <img src="landingpage.png" width="1920px" height="1080px" alt="landingpage"> 
       <!-- <h1>Welcome to ITCU Interactive World Map</h1> -->
       <p>Click anywhere to begin exploring.</p>
     </div>
@@ -323,4 +323,5 @@
   </script>
 </body>
 </html>
+
 
