--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="landing" id="landing">
     <div class="overlay"></div>
     <div class="landing-content">
-      <img src="landingpage1.png" width="600px" height=1200px" alt="landingpage"> 
+      <img src="landingpage.png" width="600px" height=1200px" alt="landingpage"> 
       <!-- <h1>Welcome to ITCU Interactive World Map</h1> -->
       <p>Click anywhere to begin exploring.</p>
     </div>
@@ -323,6 +323,7 @@
   </script>
 </body>
 </html>
+
 
 
 
