--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ th { background-color: #f4f4f4; }
 /* ===== OVERLAY FULLSCREEN ===== */
 .overlay-full { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.85); display:none; justify-content:center; align-items:center; z-index:9999; }
 .overlay-content { position: relative; max-width: 90%; max-height: 90%; text-align:center; }
-.overlay-img { width:600px; height:1200px; border-radius: 6px; box-shadow:0 0 20px rgba(255,255,255,0.15);}
+.overlay-img { width:700px; height:1200px; border-radius: 6px; box-shadow:0 0 20px rgba(255,255,255,0.15);}
 .close-btn { position: absolute; top:-10px; right:-10px; background: rgba(0,0,0,0.7); color:white; padding: 8px 12px; border-radius:50%; font-size:18px; cursor:pointer; user-select:none;}
 .close-btn:hover{background: rgba(0,0,0,1);}
 .nav-btn { position:absolute; top:50%; transform:translateY(-50%); background: rgba(0,0,0,0.5); color:white; border:none; padding:10px 16px; border-radius:50%; font-size:24px; cursor:pointer; user-select:none; }
@@ -94,7 +94,7 @@ th { background-color: #f4f4f4; }
 <div class="landing" id="landing">
   <div class="overlay"></div>
   <div class="landing-content">
-    <img src="landingpage.png" width="600px" height="1200px" alt="landingpage">
+    <img src="landingpage.png" width="700px" height="1200px" alt="landingpage">
     <p>Click anywhere to begin exploring.</p>
   </div>
 </div>
@@ -232,7 +232,7 @@ fullscreenControl.onAdd=function(){
   div.innerHTML="⛶"; div.title="Toggle Fullscreen";
   div.onclick=function(){ 
     if(!document.fullscreenElement){document.documentElement.requestFullscreen(); div.innerHTML="✖";}
-    else {document.exitFullscreen(); div.innerHTML="↗";}
+    else {document.exitFullscreen(); div.innerHTML="⛶";}
   };
   return div;
 };
@@ -362,3 +362,4 @@ unescoOverlay.addEventListener("click", e=>{
 </script>
 </body>
 </html>
+
