--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   align-items: center;
   z-index: 2000;
 ">
-  <img src="overview.png" alt="Overview" style="
+  <img src="Overview.png" alt="Overview" style="
     max-width: 90%;
     max-height: 90%;
     border-radius: 10px;
@@ -500,3 +500,4 @@ overviewOverlay.addEventListener("click", (e) => {
   </script>
 </body>
 </html>
+
