--- a/index.html
+++ b/index.html
@@ -207,33 +207,38 @@
     <button id="playBtn" class="map-btn">🕹 Play</button>
   </div>
 
-  <!-- UNESCO PDF OVERLAY -->
+ <!-- UNESCO PDF OVERLAY -->
 <div id="unescoOverlay" style="
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.85);
   display: none;
   justify-content: center;
   align-items: center;
   z-index: 2000;
+  overflow: auto;
+  padding: 10px;
 ">
-  <iframe id="unescoPDF" src="UNESCO.pdf" style="
-    width: 80%;
-    height: 80%;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.5);
-  "></iframe>
-  <span id="closeUnesco" style="
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    color: white;
-    font-size: 30px;
-    font-weight: bold;
-    cursor: pointer;
-  ">&times;</span>
+  <div style="position: relative; width: 100%; max-width: 900px; height: 90vh; background: white; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);">
+    <iframe id="unescoPDF" src="UNESCO.pdf" style="
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 10px;
+    "></iframe>
+    <span id="closeUnesco" style="
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      color: #333;
+      font-size: 30px;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 10;
+    ">&times;</span>
+  </div>
 </div>
+
 
 
   <!-- OVERVIEW OVERLAY -->
@@ -246,7 +251,7 @@
   align-items: center;
   z-index: 2000;
 ">
-  <img src="Overview.png" alt="Overview" style="
+  <img src="overview.png" alt="Overview" style="
     max-width: 90%;
     max-height: 90%;
     border-radius: 10px;
@@ -500,4 +505,3 @@ overviewOverlay.addEventListener("click", (e) => {
   </script>
 </body>
 </html>
-
